Archive/92ec60d6c6eb63ba29c46d0429b7e0a5-4610ec02f09472fe886fb7fc4894b294/output
+ g++ -std=c++1y -O3 -Wall -Wextra -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:12:15: error: ambiguous overload for ‘operator+’ (operand types are ‘A’ and ‘std::ptrdiff_t {aka long int}’)
     int i = x + static_cast<std::ptrdiff_t>(1);
               ^
main.cpp:12:15: note: candidates are:
main.cpp:12:15: note: operator+(int, std::ptrdiff_t {aka long int}) <built-in>
main.cpp:12:15: note: operator+(int*, std::ptrdiff_t {aka long int}) <built-in>
main.cpp:12:9: warning: unused variable ‘i’ [-Wunused-variable]
     int i = x + static_cast<std::ptrdiff_t>(1);
         ^
